--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,10 @@ apply plugin: "java"
 
 version '1.0'
 
-sourceCompatibility = 1.8
-
-sourceSets.main.java.srcDirs = ["src"]
-
 compileJava.options.encoding = "UTF-8"
 compileTestJava.options.encoding = "UTF-8"
+
+sourceSets.main.java.srcDirs = ["src"]
 
 repositories{
     mavenCentral()
@@ -16,21 +14,17 @@ repositories{
 
 ext{
     //the build number that this plugin is made for
-    mindustryVersion = 'v126.2'
+    arcVersion = 'v137'
 }
 
 dependencies{
-    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
-    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"
+    compileOnly "com.github.Anuken.Arc:arc-core:$arcVersion"
+    compileOnly "com.github.Anuken.Arc:arcnet:$arcVersion"
 }
 
 jar{
     archiveFileName = "${project.archivesBaseName}.jar"
     from{
         configurations.runtimeClasspath.collect{it.isDirectory() ? it : zipTree(it)}
-    }
-
-    from(rootDir){
-        include "plugin.json"
     }
 }
