--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ repositories {
 
 ext {
     arcVersion = 'v138' // the build number that this plugin is made for
-    jsonVersion = '8d7d9a0c7b' // TODO this release have a critical error
+    jsonVersion = '6dbabf69fa'
 }
 
 dependencies {
